@@ -17,6 +17,8 @@ Release 0.20.1 - Unreleased
    HBASE-1818  HFile code review and refinement (Schubert Zhang via Stack)
    HBASE-1830  HbaseObjectWritable methods should allow null HBCs
                for when Writable is not Configurable (Stack via jgray)
+   HBASE-1847  Delete latest of a null qualifier when non-null qualifiers
+               exist throws a RuntimeException 
 
   IMPROVEMENTS
    HBASE-1819  Update to 0.20.1 hadoop and zk 3.2.1
